Add ACK and separate responses to benchmark.
Signed-off-by: Achim Kraus <achim.kraus@bosch-si.com>